# physmod

./: CMakeLists.txt  Program_autumn.txt  TODO.txt  Task 3, 4, 5, 6.cpp  Task7.cpp
My_work_1/: Task 1,2.cpp  Task 8.cpp  Task 9,10.cpp
term_1/wk_05/: TODO.txt
term_2/: Program_spring.txt
term_2/wk_01/: 3.cpp  TODO.txt
term_2/wk_02/: TODO.txt
term_2/wk_03/: TODO.txt
term_2/wk_05/: TODO.md  TODO.txt
term_2/wk_06/: TODO.md
wk_01/: ex_6.cpp  my_junk_file.txt
wk_02/: 3.py  5.py  6.py
wk_03/: TODO.txt
wk_07/: TODO.txt
wk_08/: TODO.txt
wk_15/: sympy_example.py
wk_16/: animation.py  interactive_plots.ipynb
